// Vitest Snapshot v1

exports[`hoist-static > ./fixtures/hoist-static/basic.vue 1`] = `
"<script lang=\\"ts\\">
const a = 'Foo'
const b = 'Foo'!
const c = 1 + 2
const d = 1 || 2
const e = !1
const f = 1 ? 2 : 3
const g = 1 as number
const i = {
  a: 'hello',
  ['b']: 123,
  'd': true,
  nested: {
    a: 'b',
  },
}
</script>
<script setup lang=\\"ts\\">







// const h = <number>2

</script>

<template>
  <div />
</template>
"
`;

exports[`hoist-static > ./fixtures/hoist-static/magic-comment.vue 1`] = `
"<script lang=\\"ts\\">
const name = /* hoist-static */ fn()
</script>
<script setup lang=\\"ts\\">

</script>
"
`;

exports[`hoist-static > ./fixtures/hoist-static/props.vue 1`] = `
"<script lang=\\"ts\\">
const name = 'title'
</script>
<script setup lang=\\"ts\\">


defineProps([name])
</script>
"
`;
